--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,17 +1,14 @@
-worker_processes 1;
 
-events {
-  worker_connections 1024;
-}
-
-http {
-  server {
+server {
     listen 443 default_server;
     server_name _;
 
-    location / {
-      root /usr/share/nginx/html;
-      index index.html;
-    }
-  }
+	root /usr/share/nginx/html;
+	index index.html;
+
+	location / {
+		try_files $uri $uri/ =404;
+	}
+	
 }
+
