--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,17 @@ services:
     networks:
       - sasori_chunk
 
+  redis:
+    build: ./redis
+    container_name: redis
+    depends_on:
+      - wordpress
+    restart: always
+    ports:
+      - 6379:6379
+    networks:
+      - sasori_chunk
+
 
 
 # o: bind -> option bind to bind the volume to a specific path on the host machine, so that the data is persistent even if the container is removed
