--- a/ftp/Dockerfile
+++ b/ftp/Dockerfile
@@ -2,10 +2,6 @@ FROM debian:buster
 
 RUN apt-get update && apt-get install --yes vsftpd
 
-# RUN echo "local_root=/var/www/html" >> /etc/vsftpd.conf
-
-# RUN sed -i 's/^#write_enable=YES/write_enable=YES/' /etc/vsftpd/vsftpd.conf
-
 WORKDIR /
 
 COPY script.sh /script.sh
@@ -14,7 +10,10 @@ RUN chmod +x /script.sh
 
 RUN ./script.sh
 
-EXPOSE 21 1024-1048 20
+EXPOSE 21 20
 
-CMD ["vsftpd", "/etc/vsftpd.conf"]
+COPY ./vsftpd.conf /vsftpd.conf
+
+CMD ["vsftpd", "/vsftpd.conf"]
+
 
