--- a/srcs/requirements/nginx/conf/wordpress.conf
+++ b/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,8 +1,11 @@
 server {
 	listen 442 ssl;
 
+	# TLS: Transport Layer Security used to encrypt the traffic between the server and the client.
 	ssl_protocols TLSv1.2 TLSv1.3;
 
+	# ssl certificate used to verify the server or website identity.
+	# ssl keu used to encrypt and decrypt the data that is being transmitted btwn server and client.
 	ssl_certificate /etc/ssl/certs/server.crt;
 	ssl_certificate_key /etc/ssl/private/server.key;
 
