--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install --yes vsftpd
 
 WORKDIR /
 
-COPY script.sh /script.sh
+COPY ./tools/script.sh /script.sh
 
 RUN chmod +x /script.sh
 
@@ -12,7 +12,7 @@ RUN ./script.sh
 
 EXPOSE 21 20
 
-COPY ./vsftpd.conf /vsftpd.conf
+COPY ./conf/vsftpd.conf /vsftpd.conf
 
 CMD ["vsftpd", "/vsftpd.conf"]
 
