--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,11 +5,13 @@ RUN apt-get update && apt-get install -y php-fpm php-mysql php-mbstring php-xml 
 RUN apt-get install -y wget && mkdir -p /var/www/html && \
 wget https://wordpress.org/latest.tar.gz && tar -xvzf latest.tar.gz && rm -rf latest.tar.gz
 
+# install wp-cli to manage wordpress
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 
 RUN chmod +x wp-cli.phar
 
 RUN mv wp-cli.phar /usr/local/bin/wp
+
 
 COPY ./conf/wp-config.php /wp-config.php
 
