--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,12 +2,12 @@ FROM debian:buster
 
 RUN apt-get update && apt-get install --yes mariadb-server mariadb-client
 
-COPY ./tools/prepare_mysql.sh /prepare_mysql.sh
+COPY ./tools/setup-mysql.sh /setup-mysql.sh
 
-RUN chmod +x /prepare_mysql.sh
+RUN chmod +x /setup-mysql.sh
 
 RUN mkdir -p /mdlib && cp -r /var/lib/mysql/* /mdlib
 
 EXPOSE 3306
 
-ENTRYPOINT [ "./prepare_mysql.sh" ]
+ENTRYPOINT [ "./setup-mysql.sh" ]
