--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update && apt-get install --yes vsftpd
 
 WORKDIR /
 
-COPY ./tools/script.sh /script.sh
+COPY ./tools/setup-ftp.sh /setup-ftp.sh
 
-RUN chmod +x /script.sh
+RUN chmod +x /setup-ftp.sh
 
-RUN ./script.sh
+RUN ./setup-ftp.sh
 
 EXPOSE 21 20
 
