adding and using env .. can't do for ftp as well cuz test is needed

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,20 +4,19 @@ FTP_USER=abrar
 FTP_PASS=abrar123
 
 # MySQL credentials
-MYSQL_ADMIN_USER=abrar
-MYSQL_ADMIN_PASS=abrar123
+ADMIN_USER=abrar
+ADMIN_PASS=abrar123
 MYSQL_DB_NAME=wpdb
-MySQL_HOST=mariadb
+MYSQL_DB_HOST=mariadb
 
 # WordPress credentials
-WP_ADMIN_USER=abrar
-WP_ADMIN_PASS=abrar123
-WP_ADMIN_EMAIL=abraraljaberii@gmail.com
+ADMIN_EMAIL=abraraljaberii@gmail.com
 
-WP_USER_CONT=sasori
+WP_USER=sasori
 WP_USER_PASS=sasori123
 WP_USER_EMAIL=saxxxsori@gmail.com
 
+# Redis credentials
 REDIS_KEY_SALT=sasori_chuck_isakey
 REDIS_HOST=redis
 REDIS_PORT=6379
