--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -107,7 +107,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/wp
+      device: /Users/saxsori/data/wp
 
   md:
     name: md
@@ -115,7 +115,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/md
+      device: /Users/saxsori/data/md
 
   pr:
     name: pr
@@ -123,7 +123,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/pr
+      device: /Users/saxsori/data/pr
 
 # network driver enables containerized applications to communicate with each other and with external resources
 # bridge is the default network driver, used to create internal network within docker host
