--- a/srcs/requirements/bonus/service/Dockerfile
+++ b/srcs/requirements/bonus/service/Dockerfile
@@ -2,13 +2,17 @@ FROM debian:buster
 
 RUN apt-get update && apt-get install --yes curl 
 
-RUN curl -L https://github.com/portainer/portainer/releases/download/2.18.2/portainer-2.18.2-linux-arm.tar.gz --output /portainer.tar.gz 
+# RUN curl -L https://github.com/portainer/portainer/releases/download/2.18.2/portainer-2.18.2-linux-arm.tar.gz --output /portainer.tar.gz 
+
+RUN wget https://github.com/portainer/portainer/releases/download/2.17.1/portainer-2.17.1-linux-amd64.tar.gz \
+    && tar -xzf portainer-2.17.1-linux-amd64.tar.gz \
+    && rm -rf portainer-2.17.1-linux-amd64.tar.gzy
 
 RUN tar -xzvf portainer.tar.gz && rm portainer.tar.gz
 
 WORKDIR /portainer
 
-RUN chmod +x portainer
+# RUN chmod +x portainer
 
 EXPOSE 8977
 
