--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -62,6 +62,8 @@ services:
       - 1024-1048:1024-1048
     volumes:
       - wp:/var/www/html
+    env_file:
+      - .env
     networks:
       - sasori_chunk
 
@@ -107,7 +109,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/wp
+      device: /home/$USER/data/wp
 
   md:
     name: md
@@ -115,7 +117,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/md
+      device: /home/$USER/data/md
 
   pr:
     name: pr
@@ -123,7 +125,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/pr
+      device: /home/$USER/data/pr
 
 # network driver enables containerized applications to communicate with each other and with external resources
 # bridge is the default network driver, used to create internal network within docker host
