--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -109,7 +109,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /home/$USER/data/wp
+      device: /Users/$USER/data/wp
 
   md:
     name: md
@@ -117,7 +117,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /home/$USER/data/md
+      device: /Users/$USER/data/md
 
   pr:
     name: pr
@@ -125,7 +125,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /home/$USER/data/pr
+      device: /Users/$USER/data/pr
 
 # network driver enables containerized applications to communicate with each other and with external resources
 # bridge is the default network driver, used to create internal network within docker host
