add health check for mysql server

--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -32,6 +32,11 @@ services:
   mariadb:
     build: ./requirements/mariadb
     container_name: mariadb
+    healthcheck:
+      test: ["CMD_SHELL", "pgrep mysqld"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     restart: always
     ports:
       - 3306:3306
