--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -114,7 +114,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/wp
+      device: /home/$USER/data/wp
 
   md:
     name: md
@@ -122,7 +122,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/md
+      device: /home/$USER/data/md
 
   pr:
     name: pr
@@ -130,7 +130,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/$USER/data/pr
+      device: /home/$USER/data/pr
 
 # network driver enables containerized applications to communicate with each other and with external resources
 # bridge is the default network driver, used to create internal network within docker host
