--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -110,7 +110,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/wp
+      device: /home/aaljaber/data/wp
 
   md:
     name: md
@@ -118,7 +118,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/md
+      device: /home/aaljaber/data/md
 
   pr:
     name: pr
@@ -126,7 +126,7 @@ volumes:
     driver_opts:
       o: bind
       type: none
-      device: /Users/sasori/data/pr
+      device: /home/aaljaber/data/pr
 
 # network driver enables containerized applications to communicate with each other and with external resources
 # bridge is the default network driver, used to create internal network within docker host
